# dicube

./: .gitignore  .gitmodules  CMakeLists.txt  OPENJPH_INTEGRATION_PLAN.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  release.yml  test.yml
build_scripts/: build_local.py  check_wheels.py
dicube/: __init__.py  _version.py  exceptions.py
dicube/codecs/: __init__.py
dicube/codecs/jph/: __init__.py  codec.py  decode_complete.cpp  encode_complete.cpp
dicube/codecs/jxl/: __init__.py  codec.py  jxl_decode.cpp  jxl_encode.cpp
dicube/core/: __init__.py  factory.py  image.py  io.py  pixel_header.py
dicube/dicom/: dcb_streaming.py  dicom_builder.py  dicom_io.py  dicom_meta.py  dicom_status.py  dicom_tags.py  merge_utils.py  space_from_meta.py
dicube/storage/: __init__.py  dcb_file.py  pixel_utils.py
dicube/utils/: __init__.py
example/: example copy.ipynb  example.ipynb  example.py
tests/: conftest.py  test_dcb_streaming.py  test_dicom_meta.py  test_dicom_status.py  test_image.py  test_integration_exceptions.py
